syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "MdsDescriptorProto";

import "sdc/biceps/abstractcomplexdevicecomponentdescriptor.proto";
import "sdc/biceps/extension.proto";
import "sdc/biceps/instanceidentifieroneof.proto";
import "sdc/biceps/localizedtext.proto";
import "sdc/biceps/systemcontextdescriptor.proto";
import "sdc/biceps/clockdescriptor.proto";
import "sdc/biceps/batterydescriptor.proto";
import "sdc/biceps/approvedjurisdictions.proto";
import "sdc/biceps/vmddescriptor.proto";

message MdsDescriptorMsg {
  AbstractComplexDeviceComponentDescriptorMsg abstract_complex_device_component_descriptor = 1;
  message MetaDataMsg {
    ExtensionMsg element1 = 1;
    message UdiMsg {
      ExtensionMsg element1 = 1;
      string device_identifier = 2;
      string human_readable_form = 3;
      InstanceIdentifierOneOfMsg issuer = 4;
      InstanceIdentifierOneOfMsg jurisdiction = 5;
    }
    repeated UdiMsg udi = 2;
    string lot_number = 3;
    repeated LocalizedTextMsg manufacturer = 4;
    string manufacture_date = 5;
    string expiration_date = 6;
    repeated LocalizedTextMsg model_name = 7;
    string model_number = 8;
    repeated string serial_number = 9;
  }
  MetaDataMsg meta_data = 2;
  SystemContextDescriptorMsg system_context = 3;
  ClockDescriptorMsg clock = 4;
  repeated BatteryDescriptorMsg battery = 5;
  ApprovedJurisdictionsMsg approved_jurisdictions = 6;
  repeated VmdDescriptorMsg vmd = 7;
}
